methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:2: error: illegal start of simple pattern
var C array = (Color.YELLOW, Color.RED,Color.BLUE, Color.GREEN)
            ^MethodsPicture:3: error: '=' expected but ';' found.
  for (i <- 1 to 3){
^